tests/snapshots/compile_file__wrong_nums.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/wrong_nums.bend
---
[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/compile_file/wrong_nums.bend[0m[1m :[0m
[1m- expected:[0m valid binary digit
[1m- detected:[0m
[0m  1 | main = (+ 0b01[4m[31m2[0m345 0FA)[0m
