tests/snapshots/compile_file__wrong_unicode_escape.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/wrong_unicode_escape.hvm
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/compile_file/wrong_unicode_escape.hvm :
[1m- expected:[0m '}'
[1m- detected:[0m
[0m  1 | main = (String.cons '\u{1[4m[31m'[0m "\u2}\u{zxcx}")[0m
